# MiniMax-TTS-OpenAI

./: .gitignore  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml
